# clueengine

./: .gitignore  CMakeLists.txt  README.md
include/: audio.h  globals.h  lightshading.h  shadow_system.h
shaders/objects/: fragment.glsl
shaders/shadows/: debug_fragment.glsl  point_shadow_fragment.glsl  shadow_fragment.glsl
src/audio/: audio.c
src/core/: main.c
src/graphics/: rendering.c  shadow_system.c
src/utils/: actions.c  globals.c  gui.c
